--- a/shared/gemfiles/20180728/Gemfile
+++ b/shared/gemfiles/20180728/Gemfile
@@ -1,5 +1,8 @@
 source 'https://rubygems.org'
 
+gem 'json'
+gem 'nokogiri'
+gem 'sqlite3'
 gem 'fast-stemmer'
 gem 'hitimes'
 gem 'redcarpet'
@@ -11,3 +14,5 @@ gem 'kgio', :platforms => :ruby
 gem 'raindrops', :platforms => :ruby
 gem 'unicorn', :platforms => :ruby
 gem 'curses', :platforms => :ruby
+gem 'thin'
+gem 'eventmachine'
